allowing localmax to be configurable

--- a/templates/default/inspircd.conf.erb
+++ b/templates/default/inspircd.conf.erb
@@ -30,7 +30,7 @@
     threshold="10"
     commandrate="1000"
     fakelag="on"
-    localmax="3"
+    localmax="<%= @localmax %>"
     globalmax="3"
     useident="no"
     limit="5000"
