allowing globalmax to be configurable

--- a/templates/default/inspircd.conf.erb
+++ b/templates/default/inspircd.conf.erb
@@ -31,7 +31,7 @@
     commandrate="1000"
     fakelag="on"
     localmax="<%= @localmax %>"
-    globalmax="3"
+    globalmax="<%= @globalmax %>"
     useident="no"
     limit="5000"
     modes="+x"
